# nova-prompt-optimization

./: .gitignore  CONTRIBUTING.md  README.md
multimodal-generation/image-generation/: README.md
multimodal-generation/image-generation/javascript/: 01_simple_image_generation.js  02_color_guided_generation.js  03_image_guided_generation.js  04_instant_customization.js  (+9 more)
multimodal-generation/repeatable-patterns/: README.md
multimodal-generation/use-cases/: README.md
multimodal-generation/video-generation/: README.md  entitlement.py
multimodal-generation/workshop-sample/: README.md
multimodal-understanding/getting-started/: 00_setup.ipynb  01_getting_started.ipynb  02_using_converse_api.ipynb  03_skills_examples.ipynb  04_langchain_integration.ipynb  05_chat_with_document_kb.ipynb  06_llama_index_integration.ipynb  06_tool_calling.ipynb  README.md
multimodal-understanding/sample-apps/02-bedrock-notebook-lm/: Dockerfile  README.md  pyproject.toml  requirements.txt  run.sh
multimodal-understanding/sample-apps/02-bedrock-notebook-lm/src/: app.py  constants.py  prompts.py  schema.py  utils.py
multimodal-understanding/workshop/: .gitignore  01_Getting Started with Nova Models.ipynb  02_Prompting_Best_Practices.ipynb  03_MM_RAG_KB_UI.ipynb  1-getting-started.ipynb  2-prompting-best-practices.ipynb  3-rag-knowledge-bases.ipynb  4-agents.ipynb  4.1_create_agent.ipynb  4.2_associate_knowledge_base_to_agent.ipynb  4.3_invoke_agent.ipynb  5-agents-with-knowledge-bases.ipynb  6-agents-invocation.ipynb  README.md  agent.py  knowledge_base.py  requirements.txt
(+146 files in other folders)
