[tool.poetry]
name = "bedrock-notebooklm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gradio = "^5.5.0"
pypdf = "^5.1.0"
scipy = "^1.14.1"
langchain-aws = "^0.2.7"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
